--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
 		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
 		<twitter4j.version>4.0.7</twitter4j.version>
 		<lombok.version>1.18.26</lombok.version>
+		<httpclient.version>4.5.12</httpclient.version>
+		<json.version>chargebee-1.0</json.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -31,6 +33,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter</artifactId>
 				<version>${spring-boot.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>${httpclient.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.json</groupId>
+				<artifactId>org.json</artifactId>
+				<version>${json.version}</version>
 			</dependency>
 
 			<dependency>
