--- a/twitter-to-kafka-servcie/pom.xml
+++ b/twitter-to-kafka-servcie/pom.xml
@@ -28,6 +28,16 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+
+        </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>org.json</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
