--- a/twitter-to-kafka-servcie/src/main/resources/application.yml
+++ b/twitter-to-kafka-servcie/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+#TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAE%2BjgAEAAAAA6CBPseZUazCth%2B7jhEM%2BzNo2vrk%3DfOVECfMWbprlbueySzU6oBBexk0lx9MLL46FUpzptI9uecKM3D
 twitter-to-kafka-service:
   twitter-keywords:
     - Java
@@ -6,3 +7,8 @@ twitter-to-kafka-service:
     - kafka
     - ElasticSearch
   welcome-message: "Welcome! this is my test"
+  enable-v2-tweets: true
+  enable-mock-tweets: false
+  twitter-v2-base-url: https://api.twitter.com/2/tweets/search/stream?tweet.fields=created_at&expansions=author_id
+  twitter-v2-stream-rule: https://api.twitter.com/2/tweets/search/stream/rules
+  twitter-v2-bearer-token: ${TWITTER_BEARER_TOKEN}
